--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ html {
 }
 body {
     margin-bottom: 40px;
+    font-family: "Open Sans", sans-serif;
 }
 
 .footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    /* Set the fixed height of the footer here */
     height: 40px;
     background-color: #f5f5f5;
 }
@@ -21,8 +21,7 @@ body {
 
 .title {
     text-align: center;
-    font-size: 52pt;
-    /*font-family: "Alef Hebrew"*/
+    font-size: 48pt;
 }
 
 .person {
@@ -32,7 +31,6 @@ body {
 .name {
     font-size: 30px;
     text-align: center;
-    /*font-family: "Alef Hebrew";*/
 }
 
 .img {
